include/dbat/dg_scripts.h

typedef struct room_data room_data;
typedef struct obj_data obj_data;
typedef struct char_data char_data;
extern void act_mtrigger(char_data *ch, char *str, char_data *actor, char_data *victim, obj_data *object,
                         obj_data *target, char *arg);
extern void speech_mtrigger(char_data *actor, char *str);
extern void speech_wtrigger(char_data *actor, char *str);
extern void greet_memory_mtrigger(char_data *ch);
extern int greet_mtrigger(char_data *actor, int dir);
extern int entry_mtrigger(char_data *ch);
extern void entry_memory_mtrigger(char_data *ch);
extern int enter_wtrigger(room_data *room, char_data *actor, int dir);
extern int drop_otrigger(obj_data *obj, char_data *actor);
extern void timer_otrigger(obj_data *obj);
extern int get_otrigger(obj_data *obj, char_data *actor);
extern int drop_wtrigger(obj_data *obj, char_data *actor);
extern int give_otrigger(obj_data *obj, char_data *actor,
                         char_data *victim);
extern int receive_mtrigger(char_data *ch, char_data *actor,
                            obj_data *obj);
extern void bribe_mtrigger(char_data *ch, char_data *actor,
                           int amount);
extern int wear_otrigger(obj_data *obj, char_data *actor, int where);
extern int remove_otrigger(obj_data *obj, char_data *actor);
extern int command_mtrigger(char_data *actor, char *cmd, char *argument);
extern int command_otrigger(char_data *actor, char *cmd, char *argument);
extern int command_wtrigger(char_data *actor, char *cmd, char *argument);
extern int death_mtrigger(char_data *ch, char_data *actor);
extern void fight_mtrigger(char_data *ch);
extern void hitprcnt_mtrigger(char_data *ch);
extern void random_mtrigger(char_data *ch);
extern void random_otrigger(obj_data *obj);
extern void random_wtrigger(room_data *ch);
extern void reset_wtrigger(room_data *ch);
extern void load_mtrigger(char_data *ch);
extern void load_otrigger(obj_data *obj);
extern int cast_mtrigger(char_data *actor, char_data *ch, int spellnum);
extern int cast_otrigger(char_data *actor, obj_data *obj, int spellnum);
extern int cast_wtrigger(char_data *actor, char_data *vict, obj_data *obj, int spellnum);
extern int leave_mtrigger(char_data *actor, int dir);
extern int leave_wtrigger(room_data *room, char_data *actor, int dir);
extern int leave_otrigger(room_data *room, char_data *actor, int dir);
extern int door_mtrigger(char_data *actor, int subcmd, int dir);
extern int door_wtrigger(char_data *actor, int subcmd, int dir);
extern int consume_otrigger(obj_data *obj, char_data *actor, int cmd);
extern void time_mtrigger(char_data *ch);
extern void time_otrigger(obj_data *obj);
extern void time_wtrigger(room_data *room);